--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -187,11 +187,12 @@ hr {
 }
 
 nav {
-	background: #1D2C2F;
+	background: rgba(#1D2C2F,0.9);
 	width: 100%;
 	min-height: 60px;
 	padding: 11px;
 	overflow: visible !important;
+	z-index: 20;
 	
 	.collapsible {
 		position: absolute;
